syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/sub_second_entity.proto";

option java_outer_classname = "SubSecondToSecondService";

service SubSecondToSecond {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnSubSecondActivated(entity.SubSecondActivated) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "sub_second"
    };
  }

  rpc OnSubSecondAggregated(entity.SubSecondAggregated) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "sub_second"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "sub_second"
    };
  }
}
